# hakai-ckan-records-checks

./: .gitignore  LICENCE  Makefile  README.md  catalog_summary.csv  catalog_summary.xlsx  form_url_mapping.json  index.html  issues_list.csv  issues_list.xlsx  known_orcids.txt  mkdocs.yaml  mkdocs.yml  pyproject.toml  test_results.csv  versions.json
DOI-redirecting/: 404.html  catalog_summary.xlsx  index.html  issues_list.csv  issues_list.xlsx  sitemap.xml
check-ROR/: 404.html  catalog_summary.xlsx  index.html  issues_list.csv  sitemap.xml
docs/: catalog_summary.csv  catalog_summary.xlsx  index.md  issues_list.csv  issues_list.xlsx  metrics_history.json
drop-doi-review/: 404.html  index.html  issues_list.xlsx  sitemap.xml
fix-aesthetics/: 404.html  catalog_summary.csv  index.html  issues_list.xlsx  metrics_history.json  sitemap.xml
fix-build/: 404.html  catalog_summary.xlsx  index.html  sitemap.xml
fix-lineage-checks/: 404.html  catalog_summary.csv  index.html  issues_list.csv  sitemap.xml
fix-metadata-mismatch/: 404.html  catalog_summary.csv  catalog_summary.xlsx  index.html  issues_list.csv  metrics_history.json  sitemap.xml
fix-private-repos/: 404.html  catalog_summary.csv  catalog_summary.xlsx  index.html  issues_list.csv  issues_list.xlsx  metrics_history.json  sitemap.xml
fix-version-provisional/: 404.html  index.html  sitemap.xml
hakai_ckan_records_checks/: __main__.py  ckan.py  datacite.py  hakai.py
issues/: 0315e710-5cef-4089-acfc-253d0e114b36.html  04d6798b-9cda-4868-abb6-133395d50098.html  07a103e2-7fb1-4960-8842-22cc400ce04d.html  08d783c6-1f06-4f2b-a7f5-2ae7c4252ad5.html  0b2d2b69-9a1c-493f-9769-ae94eac40ca5.html  0c0a4a6e-ac9a-4763-92ed-33852a5efa6f.html  0c4f898c-e175-4c61-9290-e232dc866c86.html  0cd2411c-e525-4e95-8825-b1ba51860e83.html  0d25c2d9-e246-417d-b546-32b38ec62525.html  0d6e3b80-5271-4783-8e13-4fd5e350fb8f.html  0df9f2e1-d2e1-4bb1-8c8a-e847a8dd3204.html  0f964720-21d9-4464-88c0-e1615444c68a.html  10bbdbb2-2f67-483b-8350-70264904be77.html  10e33315-1a9e-473a-850f-73182cc12c1c.html  11ab5b35-5242-4848-8c60-0847d8fea904.html  12742e1b-b393-448a-8a42-5c169388fb9f.html  14202e87-f7b0-482d-8722-e02df68f797c.html  14b416a4-1730-4e7c-a899-228ab5c05b56.html  15d215bc-fd39-489e-8876-c707a031f820.html  1615b3c4-5d7c-43f9-956e-ebe3785af92e.html  (+203 more)
(+11306 files in other folders)
