[tool.poetry]
name = "hakai-ckan-records-checks"
version = "0.1.0"
description = ""
authors = ["Jessy Barrette <30420025+JessyBarrette@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "hakai_ckan_records_checks"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
loguru = "^0.7.2"
jinja2 = "^3.1.3"
requests = "^2.31.0"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
tqdm = "^4.66.1"
tabulate = "^0.9.0"
plotly = "^5.18.0"
openpyxl = "^3.1.2"
mkdocs-plotly-plugin = "^0.1.3"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.27"
mkdocs-git-revision-date-localized-plugin = "^1.2.6"


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
isort = "^5.13.2"
ipykernel = "^6.29.2"
nbformat = "^5.9.2"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
