[project]
name = "hakai-ckan-records-checks"
version = "0.1.0"
description = "A tool to check Hakai CKAN records"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.2",
    "loguru>=0.7.2",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0.1",
    "hakai-api>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-git-revision-date-localized-plugin>=1.5.1",
    "mkdocs-material>=9.7.6",
    "mkdocs-plotly-plugin>=0.1.3",
]
