[project]
name = "hakai-ckan-records-checks"
version = "0.1.0"
description = "A tool to check Hakai CKAN records"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.7",
    "loguru>=0.7.2",
    "jinja2>=3.1.3",
    "requests>=2.31.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "tqdm>=4.66.1",
    "tabulate>=0.9.0",
    "plotly>=5.18.0",
    "openpyxl>=3.1.2",
    "mike>=2.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-git-revision-date-localized-plugin>=1.5.1",
    "mkdocs-material>=9.7.6",
    "mkdocs-plotly-plugin>=0.1.3",
    "pytest>=8.2.2",
    "black>=24.1.1",
    "isort>=5.13.2",
    "ipykernel>=6.29.2",
    "nbformat>=5.9.2",
]
